@@ -357,9 +357,11 @@ class MainWindow(QtWidgets.QMainWindow, Ui_MainWindow):
             alt = None
         if platform.system() == 'Linux':
             for _, ddict in self.sensor_dict['DS18B20'].items():
-                self.ds18b20_data_threads.append(DS18B20DataCollectingThread(self.db_dict, ddict))
+                if ddict['table']:
+                    self.ds18b20_data_threads.append(DS18B20DataCollectingThread(self.db_dict, ddict))
             for _, ddict in self.sensor_dict['BME280'].items():
-                self.bme280_data_threads.append(BME280DataCollectingThread(self.db_dict, ddict, alt))
+                if ddict['table']:
+                    self.bme280_data_threads.append(BME280DataCollectingThread(self.db_dict, ddict, alt))
             if (self.sensor_dict['MQTT'] and self.sensor_dict['MQTT']['username'] and
                     self.sensor_dict['MQTT']['password'] and self.sensor_dict['MQTT']['address'] and
                     self.sensor_dict['MQTT']['main_topic'] and self.sensor_dict['MQTT']['devices']):
